--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -76,9 +76,6 @@
 }
 
   /* Home Page Content  */ 
-.bio {
-      margin-bottom: 10px;
-}
 
 .profile-photo {
     content: url('./images/proPic.png');
@@ -96,7 +93,7 @@
     font-family: 'MixLean', sans-serif;
     font-size: 2.75vw;
     margin-right: 10%;
-    margin: 20px;
+    margin-left: 10px;
     color: #1F363D;
     float: right;
     font-style:normal;
