--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -20,32 +20,44 @@
 }
 
 /* Icons */ 
+li a, a:focus, a:active {
+    text-decoration: none;
+}
+
+li a:hover {
+    text-decoration: none; 
+}
+
 .icons {
     display: inline;
-    line-height: 32px;
+    line-height: 25px;
     text-align: center;
     position: relative;
+    text-decoration: none;
 }
 
 .github {
     color: #40798C;
     list-style: none;
-    padding: 8px 13px;
+    padding: 5px 10px;
     display: inline;
+    text-decoration: none;
 }
 
 .linkedin {
     color: #70A9A1;
     list-style: none;
-    padding: 8px 13px;
+    padding: 5px 10px;
     display: inline;
+    text-decoration: none;
 }
 
 .email {
     color: #9EC1A3;
     list-style: none;
-    padding: 8px 13px;
+    padding: 5px 10px;
     display: inline;
+    text-decoration: none;
 }
 
 /* Hero Image & Text */ 
@@ -55,6 +67,16 @@
     max-width: 100%;
     background-position: center;
     background-size: auto;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.hero-image-secondary {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./images/Untitled\ design.png");
+    height: 200px;
+    max-width: 100%;
+    background-position: center;
+    background-size:cover;
     position: relative;
     margin-bottom: 20px;
 }
@@ -70,13 +92,22 @@
     font-size: 2.5vw;
 }
 
+.hero-text-secondary {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: 'MixLean', sans-serif;
+}
+
 .hero-text h1 {
     font-family: 'Falling Slowly Free Demo', sans-serif;
     color: #70A9A1;
 }
 
-  /* Home Page Content  */ 
-
+/* Home Page Content  */ 
 .profile-photo {
     content: url('./images/proPic.png');
     max-width: 100%;
@@ -91,9 +122,9 @@
 
 .about-me-text {
     font-family: 'MixLean', sans-serif;
-    font-size: 2.75vw;
+    font-size: 2.5vw;
     margin-right: 10%;
-    margin-left: 10px;
+    margin-left: 0px;
     color: #1F363D;
     float: right;
     font-style:normal;
