--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -67,7 +67,7 @@ li a:hover {
     height: 450px;
     max-width: 100%;
     background-position: center;
-    background-size: auto;
+    background-size: cover;
     position: relative;
     margin-bottom: 20px;
 }
@@ -77,7 +77,7 @@ li a:hover {
     height: 200px;
     max-width: 100%;
     background-position: center;
-    background-size:cover;
+    background-size: cover;
     position: relative;
     margin-bottom: 20px;
 }
@@ -261,4 +261,23 @@ button:hover {
     margin-left: 10%;
     color: #1F363D;
     font-style:normal;
+}
+
+/* Contact Form */
+.form {
+    margin: 20px;
+}
+  
+.form input {
+    display: block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 100%;
+    background-color: #70A9A1;
+}
+
+.form-style {
+    font-family: 'MixLean', sans-serif;
+    font-size: 15px;
+    margin-top: 5%;
 }
