--- a/stylesheet.css
+++ b/stylesheet.css
@@ -126,6 +126,7 @@ li a:hover {
     font-size: 2.5vw;
     margin-right: 10%;
     margin-left: 0px;
+    margin-top: 20px;
     color: #1F363D;
     float: right;
     font-style:normal;
